VDR Plugin 'mcli' Revision History
----------------------------------
2021-01-24
- pbiering add debug mask option (--debug-mask) (see mcli.h)
- pbiering fix a bunch of debug messages and turn them to be controllable by --debug-mask
- pbiering add cam-disable mode which avoid tuning to channel which requires CAM in case CAMs are generally not in use in the system (--cam-disable)

2020-12-15
- pbiering add support for DeviceType (supported since 1.7.28)
- pbiering add tuner-max option to limit amount of tuners in skins
- pbiering implement rate limiter for "Discontinuity on receiver" messages
- implement missing GetCurrentlyTunedTransponder (supported since 1.7.13)

2019-11-24
- pbiering fix several compiler warnings and incompatibilities to vdr-2.4.1 (0.9.3 work-in-progress)

2015-11-12
- hsteinhaus debugged makefiles to ensure complete compilation, even when using parallel make jobs
- hsteinhaus consolidated debug logging and disabled it by default
- hsteinhaus check if CAM is present before enforcing it's use
- hsteinhaus resolved some compiler warnings
- hsteinhaus removed some unused headers

2014-07-12
- mhorwath debug 2.1.x issue http://projects.vdr-developer.org/issues/1709 , little message cleanup, added cam info at startup, fixed compile warning  

2013-09-20
- Hoppaz applied svn diff -r188:189 from https://svn.baycom.de/repos/vdr-mcli-plugin/ : r189 | fliegl | 2013-09-19 21:26:55 +0200 (Do, 19. Sep 2013) | 2 Zeilen , Add LGPL license for all tools (including netcvdvbip)
 
2013-09-18
- hsteinhaus explicitely define API_SOCK to resolve compile problems using Debian/Ubuntu tools (reason why OS-depended define does not work is not fully understood)
- hsteinhaus explicitely set -fPIC for the plugin to resolve Debian build problems
- Hoppaz fixed makefile netcv2dvbip du to link error
- Hoppaz added netcv2dvbip revision 188 from https://svn.baycom.de/repos/vdr-mcli-plugin/mcast/netcv2dvbip