@@ -1,5 +1,9 @@
 VDR Plugin 'mcli' Revision History
 ----------------------------------
+2021-01-25
+- pbiering cMcliDevice::SetPid: LOCK_THREAD deactivated because resulting in deadlock with osdteletext and zapping
+- pbiering honor cam-disable earlier in cMcliDevice::SetChannelDevice
+
 2021-01-24
 - pbiering add debug mask option (--debug-mask) (see mcli.h)
 - pbiering fix a bunch of debug messages and turn them to be controllable by --debug-mask
